--- a/nars/css/style.css
+++ b/nars/css/style.css
@@ -463,7 +463,7 @@ footer .policy a{color:#ddd; padding:0 20px 0 0;}
   .gnb i{display: block;float: right; transform: translateY(50%);}
 
   /* 2depth메뉴 */
-  .gnb li>ul{background: #ffffff; border-top:2px solid #0a0a0a; border-bottom:2px solid #0a0a0a; position: sticky;}
+  .gnb li>ul{background: #ffffff; border-top:2px solid #0a0a0a; border-bottom:2px solid #0a0a0a; position: relative;}
   .gnb li>ul>li{font-size: 20px; clear: both;  text-align: left;
                 border-bottom: 2px solid #ddd; width:100%;
                 margin-left:80px;}
