--- a/nars/css/style.css
+++ b/nars/css/style.css
@@ -292,7 +292,7 @@ html, body {
     background-position-y: center;}
 .gift .img-box{ position: relative; }
 .img-box{position: relative; margin: 5px; overflow: hidden;}
-.img-box:hover .gift-wrap{top:0;}
+.img-box:hover .gift-wrap{opacity: 1; visibility:visible;}
 .img-box img{width: 100%; display: block;}
 .gift .gift-bg1{background: url(../img/gift1.jpg)no-repeat center; background-size: cover; }
 .gift .gift-bg2{background: url(../img/gift2.jpg)no-repeat center; background-size: cover; }
@@ -302,8 +302,10 @@ html, body {
 /* 기프트 1번째 그룹*/
 .gift .text-box{padding:40px 20px; box-sizing: border-box;}
 .gift .gift-wrap{
+    opacity: 0;
+    transition: 0.5s;
     position: absolute;
-    top:100%; left:0; right:0; width: 100%; height: 100%;
+    top:0; left:0; right:0; width: 100%; height: 100%;
     background: rgba(255,255,255,0.8);
     }
 .gift2 .gift-info{left:80px; right:80px;}
@@ -553,8 +555,8 @@ section {position: relative; padding-top: 100px;}
   .gift .text-box a{margin-bottom: 10px;}
   .gift .text-box h3 {font-size: 24px;margin: 10px;}
   .gift .text-box p { font-size: 20px; margin-bottom: 10px;}
-  .gift-info{left:0; top:0; right:0;bottom:0; border: none; padding:0; transform: translateY(5%);}
-  .gift-info-big {left:0;top:0;right:0;bottom: 0;}
+  .gift-info{left:0; top:0; right:0;bottom:0; border: none; padding:0; }
+
   /* 기프트 1번째 그룹*/
   .gift .gift-info h3 { font-size: 20px; margin-top: 15px;}
   .gift .gift-info p { font-size: 14px; padding: 5px 5px;}
