--- a/nars/css/style.css
+++ b/nars/css/style.css
@@ -564,7 +564,7 @@ section {position: relative; padding-top: 100px;}
   /* 로그인 팝업창 */
   .login-popup {
     margin: 0;
-    box-shadow:none: ;
+    box-shadow:none;
     max-width: 100%;
     height: 100%;
     background: white;
