--- a/nars/css/style.css
+++ b/nars/css/style.css
@@ -27,11 +27,11 @@ select{
   -webkit-appearance:none;
   width:100%; height: 50px;
   border: 2px solid #333;
-  background: url(../img/select-allow-down.jpg) no-repeat right top;
+  background: url(../img/allow_bottom.png) no-repeat right top;
   font-size: 18px;
   padding:0 10px;
 }
-select:focus{background:url(../img/select-allow-up.jpg) no-repeat right top; background-color: #ddd;}
+select:focus{background:url(../img/allow_top.png) no-repeat right top; background-color: #ddd;}
 option{padding:30px; font-size:18px; }
 
 ::-webkit-scrollbar {width: 10px; background-color:#eee; }
