--- a/nars/css/style.css
+++ b/nars/css/style.css
@@ -63,9 +63,9 @@ option{padding:30px; font-size:18px; }
 .icon-instar{width:50px; height:40px;background-position:-600px -300px;}
 .icon-search-W{width:50px; height:50px;background-position:-300px -400px;}
 .icon-del{width:40px; height:40px; background-position:-500px -400px;}
-.icon-kakao-C{width:100px; height:100px; background-position:-200px -600px;}
-.icon-naver-C{width:100px; height:100px; background-position:-300px -600px;}
-.icon-facebook-C{width:100px; height:100px; background-position:-400px -600px;}
+.icon-kakao-C{width:70px; height:100px; background-position:-200px -600px;}
+.icon-naver-C{width:70px; height:100px; background-position:-300px -600px;}
+.icon-facebook-C{width:70px; height:100px; background-position:-400px -600px;}
 .icon-minus{width:20px; height:20px; background-position:-300px -100px;}
 .icon-plus{width:20px; height:20px; background-position:-400px -100px;}
 .icon-transh{width:40px; height:40px; background-position:-200px -100px;}
@@ -76,6 +76,7 @@ option{padding:30px; font-size:18px; }
 .icon-arrow-up{width:40px; height:20px; background-position:-600px -100px; }
 .wrap{position: relative;}
 .active{display:block;}
+.nav-active{color:#dddddd; background:#8b1a1e; }
 /* header ========================================================= */
 header {width:100%; height: 150px; position:fixed; z-index:30;
         border-bottom: 1px solid #0a0a0a; background-color: #ffffff;}
@@ -91,7 +92,7 @@ nav .top-area {display: none;}
 /* 1depth메뉴 */
 .gnb{overflow: hidden; }
 .gnb>li{float:left;}
-.gnb>li>a {line-height: 50px; padding:0px 20px; box-sizing: border-box;
+.gnb>li>a {line-height: 50px; padding:0px 10px 0px 20px; box-sizing: border-box;
             font-size: 20px; color: #0a0a0a; text-align: left; background-color: #ffffff;}
 /* 2depth메뉴 */
 .gnb>li ul{background:#0a0a0a;  position: absolute; left:0; width:100%;
@@ -405,7 +406,7 @@ footer .policy a{color:#ddd; padding:0 20px 0 0;}
 .popup-body .find-info a{font-size:18px; padding: 0 40px 0 0px;}
 .popup-body .sns{border-top: 2px solid #ddd; border-bottom: 2px solid #ddd;}
 .popup-body .sns h3{font-weight: lighter;}
-.popup-body .sns .row{width:320px; margin: 0 auto;}
+.popup-body .sns .row{text-align: center;}
 /* .popup-body .sns .row a{width: 100px; height: 100px;}
 .popup-body .sns .row a:nth-of-type(1){margin-left: auto;} */
 .popup-body .new p{font-size: 18px; margin-bottom: 30px;}
@@ -469,7 +470,7 @@ footer .policy a{color:#ddd; padding:0 20px 0 0;}
   .gnb i{display: block;float: right; transform: translateY(90%);}
   .gnb li>ul>li:last-child{border-bottom: none;}
   /* 2depth메뉴 */
-  .gnb li>ul{background: #ffffff; border-top:2px solid #0a0a0a; border-bottom:2px solid #0a0a0a; position: relative;}
+  .gnb li>ul{background: #ffffff; border-top:1px solid #0a0a0a; position: relative;}
   .gnb li>ul>li{font-size: 20px; clear: both;  text-align: left;
                 border-bottom: 2px solid #ddd; width:100%;
                 margin-left:80px;}
