--- a/nars/css/style.css
+++ b/nars/css/style.css
@@ -93,14 +93,15 @@ nav .top-area {display: none;}
 .gnb{overflow: hidden; }
 .gnb>li{float:left;}
 .gnb>li>a {line-height: 50px; padding:0px 10px 0px 20px; box-sizing: border-box;
-            font-size: 20px; color: #0a0a0a; text-align: left; background-color: #ffffff;}
+            font-size: 20px; color: #0a0a0a; text-align: left; }
 /* 2depth메뉴 */
 .gnb>li ul{background:#0a0a0a;  position: absolute; left:0; width:100%;
            text-align:center; overflow: hidden; display: none;}
 .gnb>li ul li{font-size: 20px; margin:0; display: inline-block; text-align: center; }
 .gnb>li ul li a{line-height: 50px; color:#ffffff; font-size: 18px; padding: 0px 40px; }
 .gnb i {display: none;}
-.gnb>li a:hover{color:#dddddd; background:#8b1a1e; }
+/* .gnb>li a:hover{color:#dddddd; background:#8b1a1e; } */
+/* .gnb>li a.active{color: #dddddd; background: #8b1a1e;} */
 .subnav li a:hover{text-decoration: underline; background:none; }
 div.util-nav{float: right; padding-right: 10px;}
 div.util-nav .icon{display: block; float: left; margin-right: 5px;}
@@ -489,6 +490,7 @@ footer .policy a{color:#ddd; padding:0 20px 0 0;}
 @media (max-width:990px ) {
 .gift-info h3{font-size: 14px;}
 .gift-info p{font-size: 10px; padding: 5px 0;}
+.store .wrap {margin: 0 auto;}
 }
 
 @media (max-width:767px ){
@@ -629,8 +631,8 @@ section {position: relative; padding-top: 50px;}
 .checkbox-group label {  margin-left: 5px; display: inline;}
 .store .store-result .top-area { height: 25px; font-size: 13px; line-height: 20px;}
 .result-list {height: 150px;}
-.result-list ul { width: 90%; height: auto; margin: auto;}
-.result-list ul li a b { font-size: 18px; line-height: 25px;}
+.result-list ul { height: auto; margin: auto;}
+.result-list ul li a b { font-size: 18px; line-height: 25px; padding-left: 10px;}
 .store .title,
 .store .row{display: none;}
 
