--- a/nars/css/style.css
+++ b/nars/css/style.css
@@ -76,7 +76,7 @@ option{padding:30px; font-size:18px; }
 .icon-arrow-up{width:40px; height:20px; background-position:-600px -100px; }
 .wrap{position: relative;}
 .active{display:block;}
-.nav-active{color:#dddddd; background:#8b1a1e; }
+.nav-active{color:#dddddd !important; background:#8b1a1e; }
 /* header ========================================================= */
 header {width:100%; height: 150px; position:fixed; z-index:30;
         border-bottom: 1px solid #0a0a0a; background-color: #ffffff;}
@@ -92,7 +92,7 @@ nav .top-area {display: none;}
 /* 1depth메뉴 */
 .gnb{overflow: hidden; }
 .gnb>li{float:left;}
-.gnb>li>a {line-height: 50px; padding:0px 10px 0px 20px; box-sizing: border-box;
+.gnb>li>a {line-height: 50px; padding:0px 20px 0px 20px; box-sizing: border-box;
             font-size: 20px; color: #0a0a0a; text-align: left; }
 /* 2depth메뉴 */
 .gnb>li ul{background:#0a0a0a;  position: absolute; left:0; width:100%;
