--- a/nars/css/style.css
+++ b/nars/css/style.css
@@ -72,14 +72,13 @@ option{padding:30px; font-size:18px; }
 .icon-left{width:70px; height:120px; background-position:-50px -400px;}
 .icon-right{width:70px; height:120px; background-position:-200px -400px;}
 .icon-arrow-down{width:40px; height:20px; background-position:-500px -100px;}
-.icon-arrow-down-w{width:40px; height:20px; background-position:-700px -100px;}
-.icon-arrow-up{width:40px; height:20px; background-position:-600px -100px; }
+.icon-arrow-down-w{width:40px; height:20px; background-position:-700px -96px;}
+.icon-arrow-up{width:40px; height:20px; background-position:-600px -96px; }
 .wrap{position: relative;}
 .active{display:block;}
 .nav-active{color:#dddddd !important; background:#8b1a1e; }
 /* header ========================================================= */
-header {width:100%; height: 150px; position:fixed; z-index:30; transition: 0.5s;
-        border-bottom: 1px solid #0a0a0a; background-color: #ffffff;}
+header {width:100%; height: 150px; position:fixed; z-index:30; border-bottom: 1px solid #0a0a0a; background-color: #ffffff;}
 header h1 {text-align:center; height: 100px;}
 h1 a.icon-logo {width:130px; height: 55px; background-position:-50px -30px; margin-top: 25px}
 .btn-menu { display: none; }
@@ -103,7 +102,7 @@ nav .top-area {display: none;}
 /* .gnb>li a:hover{color:#dddddd; background:#8b1a1e; } */
 /* .gnb>li a.active{color: #dddddd; background: #8b1a1e;} */
 .subnav li a:hover{text-decoration: underline; background:none; }
-div.util-nav{float: right; padding-right: 10px;}
+div.util-nav{float: right; padding-right: 10px; padding-top: 5px;}
 div.util-nav .icon{display: block; float: left; margin-right: 5px;}
 
 /* Tab-manu================================================================ */
@@ -126,12 +125,12 @@ div.util-nav .icon{display: block; float: left; margin-right: 5px;}
 }
 .tab-contents .select{background:#ddd; line-height: 30px; }
 .tab-contents .select label i{vertical-align: middle; margin:0 10px;}
-.tab-contents .tab-contents-body{ overflow-y: scroll;height: 500px;}
+.tab-contents .tab-contents-body{ overflow-y: scroll;}
 .tab-contents-body div ul li label{vertical-align: top}
 /* Shopoing Cart */
 .tab-contents-body .cart,
 .tab-contents-body .wish { padding:10px;  box-sizing: border-box;}
-.tab-contents-body .cart ul{}
+.tab-contents-body ul p{text-align: center;}
 .tab-contents-body .cart ul li,
 .tab-contents-body .wish ul li{border-bottom: 2px solid #ddd; margin-top: 10px;}
 .tab-contents-body .cart ul li .products,
@@ -494,27 +493,27 @@ footer .policy a{color:#ddd; padding:0 20px 0 0;}
 }
 
 @media (max-width:767px ){
-.tab-menu { width: 100%; }
-.tab-contents .tab-contents-body{
-  overflow-y: scroll;
-  height: auto;
-}
+  .tab-menu { width: 100%; }
+  .tab-contents .tab-contents-body{
+    overflow-y: scroll;
+    height: auto;
+  }
 .bestseller .icon-plus-L, .makeup .icon-plus-L {
       width: 30px;
       height: 30px;
       background-position: -134px -114px;
-  }
-/*main-ad===========================================================================  */
-section {position: relative; padding-top: 50px;}
-.main-ad{height: 600px;}
-.main_img1{background-image: url(../img/mob1.jpg); background-size: cover;}
-.main_img2{background-image: url(../img/mob2.jpg); background-size: cover;}
-.main_img3{background-image: url(../img/mob3.jpg); background-size: cover;}
-.main_img4{background-image: url(../img/mob4.jpg); background-size: cover;}
-.swiper-text{}
-.swiper-text h3{font-size: 30px; text-align: center;}
-.swiper-text p{font-size: 18px; text-align: center; line-height:25px; width:80%; margin: 0 auto; margin-bottom:20px; }
-.swiper-text a{
+    }
+  /*main-ad===========================================================================  */
+  section {position: relative; padding-top: 50px;}
+  .main-ad{height: 600px;}
+  .main_img1{background-image: url(../img/mob1.jpg); background-size: cover;}
+  .main_img2{background-image: url(../img/mob2.jpg); background-size: cover;}
+  .main_img3{background-image: url(../img/mob3.jpg); background-size: cover;}
+  .main_img4{background-image: url(../img/mob4.jpg); background-size: cover;}
+  .swiper-text{}
+  .swiper-text h3{font-size: 30px; text-align: center;}
+  .swiper-text p{font-size: 18px; text-align: center; line-height:25px; width:80%; margin: 0 auto; margin-bottom:20px; }
+  .swiper-text a{
     border: none;
     color: white;
     font-size: 20px;
@@ -643,4 +642,13 @@ footer .etc-nav li { clear: both; text-align: center; float: none;}
 footer .etc-nav li a {width: 100%; padding: 20px 0px;}
 footer .sns {float: none; display: inline-block;}
 footer .bottom-area {text-align: center;}
+}
+
+@media (min-width:1200px){
+  header{transition:0.5s;}
+  header h1{transition: margin 0.5s;}
+  section{transition: padding 0.5s;}
+  header.h{height: 50px;}
+  .scroll h1{margin-top: -100px;}
+  .scroll section{padding-top:50px;}
 }
